--- a/clock/index.html
+++ b/clock/index.html
@@ -7,6 +7,7 @@
   <title>Clock</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/main.js" defer></script>
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 <body>
   <main>
@@ -16,8 +17,8 @@
   </main>
   <footer>
     <p class="display" id="d-hour"></p>
-    <p class="display" id="d-second"></p>
     <p class="display" id="d-minute"></p>
+    <p class="display" id="d-second"></p>
   </footer>
 </body>
 </html>
